wrong tweak.xm, added some pref stuff
Prob still ain't working lol

--- a/control
+++ b/control
@@ -1,7 +1,7 @@
 Package: com.jjgadgets.uniblurmod
 Name: Universal Blur Modifier
 Depends: mobilesubstrate
-Version: 0.0.1
+Version: 0.0b1
 Architecture: iphoneos-arm
 Description: An awesome MobileSubstrate tweak!
 Maintainer: JJGadgets
